feat: add addFavorite, deleteFavorite and deleteNote to DatabaseService